--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,15 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+       	<ul>
+
+       		{% for link in site.links %}
+       			<li>
+       				<a href="{{ link.url }}">{{ link.title }}</a>
+       			</li>
+       		{% endfor %}
+
+       	</ul>
       </div>
     </nav>
 
