--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<div class="post">
+<article class="site-section site-section-last">
+	<header class="post-header">
+		<h1 class="post-title">{{ page.title }}</h1>
+	</header>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+	<div class="post-body">
+			{{ content }}
+	</div>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+</article>
