--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+	{% include head.html %}
 
-  <body>
+	<body>
 
-    {% include header.html %}
+		{% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+		<div class="page-content">
+			<div class="wrapper">
+				{{ content }}
+			</div>
+		</div>
 
-    {% include footer.html %}
+		{% include footer.html %}
 
-  </body>
+		<script src="/js/jquery.js" type="text/javascript"></script>
+		<script src="/js/main.js" type="text/javascript"></script>
+		<script src="/js/parallax.min.js" type="text/javascript"></script>
+		<script src="/libs/jquery/jquery-2.1.3.min.js"></script>
+
+
+<script src="/libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="/libs/mixitup/mixitup.min.js"></script>
+<script src="libs/scroll2id/PageScroll2id.min.js"></script>
+<script src="/libs/waypoints/waypoints.min.js"></script>
+<script src="/libs/animate/animate-css.js"></script>
+
+	</body>
 
 </html>
