--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,102 @@
 @charset "utf-8";
 
 
+.main_head {
+	min-height: 620px;
+	padding-top: 20px; }
+
+.loader {
+	background: none repeat scroll 0 0 #181818;
+	bottom: 0;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+	width: 100%;
+	z-index: 9999;
+}
+
+.loader_inner {
+
+	//background-image: url("../images/preloader.gif");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-color: #181818;
+	height: 60px;
+	width: 60px;
+	margin-top: -30px;
+	margin-left: -30px;
+	left: 50%;
+	top: 50%;
+	position: absolute;
+}
+
+.logo {
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  margin-bottom: 10px;
+  margin-top: 13%;
+	-webkit-animation-delay: 1s;
+	-moz-animation-delay: 1s;
+	animation-delay: 1s;
+}
+
+
+.top_wrapper {
+	display: table;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
+.top_wrapper .top_descr {
+}
+
+.top_wrapper .top_descr .top_centered {
+	text-align: center;
+}
+
+.top_wrapper .top_text {
+	display: inline-block;
+}
+
+.top_wrapper h1 {
+	font-family: 'clarkeregular';
+	margin-top: 10px;
+	display: inline-block;
+	color: #fff;
+	padding: 7px 100px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 1.8em;
+	letter-spacing: .1em;
+	background-color: rgba(187, 89, 64, .8);
+	border-radius: 50px;
+	margin-left: 20px;
+	margin-right: 20px;
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+
+.top_wrapper p {
+	font-family: 'clarkeregular';
+	margin-top: 10px;
+	font-size: 1.2em;
+	letter-spacing: .1em;
+	color: #fff;
+	text-transform: uppercase;
+	-webkit-animation-delay: 1.5s;
+	-moz-animation-delay: 1.5s;
+	animation-delay: 1.5s;
+}
+
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
@@ -19,8 +115,8 @@ $h4-font-size: 24px;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
+$text-color:       #fff;
+$background-color: #181818;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
@@ -55,7 +151,7 @@ $on-laptop:        800px;
 				"base",
 				"layout",
 				"syntax-highlighting",
+				"typography",
 				"components/post",
 				"components/project"
-
 ;
