--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,9 +1,9 @@
-<li class="project">
-	<a href="{{ project.url }}">
-		<figure>
-			<img src="{{ project.featured_image }}" alt="">
-			<figcaption class="project-caption">
-			</figcaption>
-		</figure>
-	</a>
-</li>
+<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
+	<img src="{{ project.featured_image }}" alt="Alt" />
+	<div class="port_item_cont">
+		<h3>{{ project.title }}</h3>
+		<a href="{{ project.url }}" class="">...</a>
+	</div>
+</div>
+
+
