--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,8 +80,10 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-		font-weight: 500;
-		text-align: center;
+	font-weight: 500;
+	text-align: center;
+	font-family: 'clarkeregular';
+	letter-spacing: .1em;
 }
 
 .mega { font-size: $mega-font-size; }
