--- a/css/main.scss
+++ b/css/main.scss
@@ -100,6 +100,51 @@
 	animation-delay: 1.5s;
 }
 
+.s_portfolio {
+	h1 {
+		font-size: 2em;
+		margin-bottom: 25px;
+	}
+}
+
+.portfolio_item {
+	display: none;
+	padding: 0;
+	max-height: 219px;
+	overflow: hidden;
+
+}
+.portfolio_item img {
+	width: 100%;
+}
+.portfolio_item .port_item_cont {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	text-align: center;
+	padding-top: 15%;
+	opacity: 0;
+	transition: all 0.35s;
+}
+.portfolio_item:hover .port_item_cont {
+	opacity: 1;
+	padding-top: 20%;
+}
+.portfolio_item h3 {
+	color: #fff;
+	margin-bottom: 0;
+}
+.portfolio_item a {
+	background-color: transparent;
+	padding: 2px 10px;
+	display: inline-block;
+}
+
+
+
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
